# setuptools_ocrd

./: .pre-commit-config.yaml  LICENSE  README-DEV.md  README.md  _own_version_helper.py  pyproject.toml  serve-local-wheel.sh
.github/workflows/: release-check-version-tag  release-github+pypi.yml  release.yml
setuptools_ocrd/: __init__.py  __main__.py  _get_version.py
setuptools_ocrd/_integration/: setuptools.py
test_project/: pyproject.toml
test_project/src/test_project/: test.py
