[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "setuptools_ocrd"
version = "0.0.5"
authors = [
    {name = "Mike Gerber", email = "mike.gerber@sbb.spk-berlin.de"},
]
description = "Manage your package version through ocrd-tool.json"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["ocr-d", "setuptools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Build Tools",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.entry-points."setuptools.finalize_distribution_options"]
setuptools_ocrd = "setuptools_ocrd._integration.setuptools:infer_version"
